--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
 </body>
 
 
+
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>  
+
+<script src="index.js"> </script>
 
 
 </html> 
